--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 @import "reset.css";
 @import "status-bar.css";
+@import "header.css";
 
 body {
     background-color: white;
     padding: 10px 20px;  /* 첫번째 값은 top&bottom, 두번째 값은 left&right*/
     color: #020202;
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+}
+
+a{
+    color:inherit;
 }
