--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
+@import "nav-bar.css";
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     background-color: white;
@@ -10,6 +15,6 @@ body {
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
 
-a{
+a {
     color:inherit;
 }
