--- a/css/chat.css
+++ b/css/chat.css
@@ -72,12 +72,7 @@
 .message {
     display: flex;
     align-items: flex-start;
-    width: 50%;
     margin-bottom: 20px;
-}
-
-.message .message__content {
-    width:80%;
 }
 
 .incoming-message {
@@ -100,10 +95,12 @@
     box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
     padding: 10px 20px;
     border-radius: 20px;
+    color: white;
+    font-weight: 600;
 }
 
 .incoming-message .message__author{
-    margin-top: 10px;
+    margin-top: 25px;
     display: block;
     font-weight: 600;
     font-size: 12px;
@@ -111,8 +108,10 @@
 
 .incoming-message .message__bubble {
     border-bottom-left-radius: 0px;
+    background-image: linear-gradient(to right, #7b4397, #dc2430);
 }
 
 .sent-message .message__bubble {
     border-bottom-right-radius: 0px;
+    background-image: linear-gradient(to left, #00c6ff, #0072ff);
 }
