--- a/css/chat.css
+++ b/css/chat.css
@@ -95,12 +95,13 @@
     box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
     padding: 10px 20px;
     border-radius: 20px;
+    display:block;
     color: white;
     font-weight: 600;
 }
 
 .incoming-message .message__author{
-    margin-top: 25px;
+    margin-top: 10px;
     display: block;
     font-weight: 600;
     font-size: 12px;
