--- a/css/chat.css
+++ b/css/chat.css
@@ -1,15 +1,26 @@
-.chat-screen { /* main element */
-    background-image: url("../images/chatBG.png");
-    min-height: 100vh;
+.header-wrapper {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    padding: 10px 0px;
+    background-color: white;
+    box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
 .chats-body {
-    padding: 0; 
+    padding: 10px 0px; 
+    padding-top: 100px;
 }
 
 .chats-body .header,
 .chats-body .status-bar {
     padding:0px 20px;
+}
+
+.chats-body{
+    background-image: url("../images/chatBG.png");
+    min-height: 1000vh;
 }
 
 .chat__write {
