--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,18 @@ a {
     color:inherit;
     text-decoration: none;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+main {
+    animation: fadeIn 0.3s ease-in-out
+}
